changes in text

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="clock">
         <div>
             <span id="hour">00</span>
-            <!-- <span class="text">Hours</span> -->
+            <span class="text">Hours</span>
         </div>
         <div>
             <span id="minutes">00</span>
-            <!-- <span class="text">Minutes</span> -->
+            <span class="text">Minutes</span>
         </div>
         <div>
             <span id="seconds">00</span>
-            <!-- <span class="text">Seconds</span> -->
+            <span class="text">Seconds</span>
         </div>
         <div>
             <span id="ampm">AM</span>
