--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="clock">
         <div>
             <span id="hour">00</span>
-            <span class="text">Hours</span>
+            <!-- <span class="text">Hours</span> -->
+
         </div>
         <div>
             <span id="minutes">00</span>
